# file-sharing-rs

./: Cargo.toml
src/: main.rs  server.rs  template.rs  utils.rs
static/: style.css
templates/: app.html  file.html  home.html  notfound.html  uploaded.html
