[package]
name = "file-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["multipart"] }
rand = "0.8.5"
mime_guess = "2.0.4"
